<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/radius_card_list"
        android:layout_margin="@dimen/margin_horizontal_card_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="6"
                    app:srcCompat="@drawable/ic_broken_image_24"
                    tools:srcCompat="@android:drawable/ic_menu_gallery" />

                <TextView
                    android:id="@+id/txt_name_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hiny_pokemon_name"
                    android:textSize="@dimen/name_size" />

                <TextView
                    android:id="@+id/txt_type_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/hint_type" />

                <TextView
                    android:id="@+id/txt_pokedex_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/hint_pokedex" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_pokemon_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_baseline_add_black_24" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>